Fixed bugs and layout issues.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1169,3 +1169,8 @@ nav .dropdown-menu
   color: #fff;
 }
 
+.heading-row
+{
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
